force-app/main/default/objects/Employee__c/fields/commAddress__c.field-meta.xml
<CustomField>
    <fullName>commAddress__c</fullName>
    <label>commAddress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>