force-app/main/default/objects/Employee__c/fields/createdByAdmin__c.field-meta.xml
<CustomField>
    <fullName>createdByAdmin__c</fullName>
    <label>createdByAdmin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>