force-app/main/default/objects/Employee__c/fields/createdDate__c.field-meta.xml
<CustomField>
    <fullName>createdDate__c</fullName>
    <label>createdDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>