force-app/main/default/objects/Employee__c/fields/dateOfJoining__c.field-meta.xml
<CustomField>
    <fullName>dateOfJoining__c</fullName>
    <label>dateOfJoining</label>
    <length>20</length>
    <type>Text</type>
</CustomField>