force-app/main/default/objects/Employee__c/fields/emailId__c.field-meta.xml
<CustomField>
    <fullName>emailId__c</fullName>
    <label>emailId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>