force-app/main/default/objects/Employee__c/fields/Emergency__c.field-meta.xml
<CustomField>
    <fullName>Emergency__c</fullName>
    <label>EmergencyContact_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>