force-app/main/default/objects/Employee__c/fields/EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNo__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>EmployeeNo</label>
    <type>AutoNumber</type>
</CustomField>