force-app/main/default/objects/Employee__c/fields/finalSubmission__c.field-meta.xml
<CustomField>
    <fullName>finalSubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>finalSubmission</label>
    <type>Checkbox</type>
</CustomField>