force-app/main/default/objects/Employee__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>firstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>