force-app/main/default/objects/Employee__c/fields/foodPref__c.field-meta.xml
<CustomField>
    <fullName>foodPref__c</fullName>
    <label>foodPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veg</fullName>
            </value>
            <value>
                <fullName>Non Veg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>