force-app/main/default/objects/Employee__c/fields/isBankStatementAvailable__c.field-meta.xml
<CustomField>
    <fullName>isBankStatementAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBankStatementAvailable</label>
    <type>Checkbox</type>
</CustomField>