force-app/main/default/objects/Employee__c/fields/isBankStatementAvailable_Adminn__c.field-meta.xml
<CustomField>
    <fullName>isBankStatementAvailable_Adminn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBankStatementAvailable_Adminn</label>
    <type>Checkbox</type>
</CustomField>