force-app/main/default/objects/Employee__c/fields/isBloodGroupReportAvailable__c.field-meta.xml
<CustomField>
    <fullName>isBloodGroupReportAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBloodGroupReportAvailable</label>
    <type>Checkbox</type>
</CustomField>