force-app/main/default/objects/Employee__c/fields/isBloodGroupReportAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isBloodGroupReportAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBloodGroupReportAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>