force-app/main/default/objects/Employee__c/fields/isCodeOfConductAvailable__c.field-meta.xml
<CustomField>
    <fullName>isCodeOfConductAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCodeOfConductAvailable</label>
    <type>Checkbox</type>
</CustomField>