force-app/main/default/objects/Employee__c/fields/isExperienceLetterAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isExperienceLetterAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExperienceLetterAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>