force-app/main/default/objects/Employee__c/fields/isGratuityFormAvailable__c.field-meta.xml
<CustomField>
    <fullName>isGratuityFormAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGratuityFormAvailable</label>
    <type>Checkbox</type>
</CustomField>