force-app/main/default/objects/Employee__c/fields/isGratuityFormAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isGratuityFormAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGratuityFormAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>