force-app/main/default/objects/Employee__c/fields/isPanCardAvailable__c.field-meta.xml
<CustomField>
    <fullName>isPanCardAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPanCardAvailable</label>
    <type>Checkbox</type>
</CustomField>