force-app/main/default/objects/Employee__c/fields/isPanCardAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isPanCardAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPanCardAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>