force-app/main/default/objects/Employee__c/fields/isPhotoAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isPhotoAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPhotoAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>