force-app/main/default/objects/Employee__c/fields/isProofOfAddressAvailable__c.field-meta.xml
<CustomField>
    <fullName>isProofOfAddressAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProofOfAddressAvailable</label>
    <type>Checkbox</type>
</CustomField>