force-app/main/default/objects/Employee__c/fields/isResumeAvailable__c.field-meta.xml
<CustomField>
    <fullName>isResumeAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isResumeAvailable</label>
    <type>Checkbox</type>
</CustomField>