force-app/main/default/objects/Employee__c/fields/isSalarySlipAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isSalarySlipAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSalarySlipAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>