force-app/main/default/objects/Employee__c/fields/isSignedOfferLetterAvailable__c.field-meta.xml
<CustomField>
    <fullName>isSignedOfferLetterAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSignedOfferLetterAvailable</label>
    <type>Checkbox</type>
</CustomField>