force-app/main/default/objects/Employee__c/fields/isSignedOfferLetterAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isSignedOfferLetterAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSignedOfferLetterAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>