force-app/main/default/objects/Employee__c/fields/lang1Read__c.field-meta.xml
<CustomField>
    <fullName>lang1Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang1Read</label>
    <type>Checkbox</type>
</CustomField>