force-app/main/default/objects/Employee__c/fields/lang1Write__c.field-meta.xml
<CustomField>
    <fullName>lang1Write__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang1Write</label>
    <type>Checkbox</type>
</CustomField>