force-app/main/default/objects/Employee__c/fields/lang2__c.field-meta.xml
<CustomField>
    <fullName>lang2__c</fullName>
    <label>lang2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>