force-app/main/default/objects/Employee__c/fields/lang2Read__c.field-meta.xml
<CustomField>
    <fullName>lang2Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang2Read</label>
    <type>Checkbox</type>
</CustomField>