force-app/main/default/objects/Employee__c/fields/lang2Speak__c.field-meta.xml
<CustomField>
    <fullName>lang2Speak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang2Speak</label>
    <type>Checkbox</type>
</CustomField>