force-app/main/default/objects/Employee__c/fields/lang3__c.field-meta.xml
<CustomField>
    <fullName>lang3__c</fullName>
    <label>lang3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>