force-app/main/default/objects/Employee__c/fields/lang3Speak__c.field-meta.xml
<CustomField>
    <fullName>lang3Speak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang3Speak</label>
    <type>Checkbox</type>
</CustomField>