force-app/main/default/objects/Employee__c/fields/lang3Write__c.field-meta.xml
<CustomField>
    <fullName>lang3Write__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang3Write</label>
    <type>Checkbox</type>
</CustomField>