force-app/main/default/objects/Employee__c/fields/lastModified__c.field-meta.xml
<CustomField>
    <fullName>lastModified__c</fullName>
    <label>lastModified</label>
    <length>100</length>
    <type>Text</type>
</CustomField>