force-app/main/default/objects/Employee__c/fields/midName__c.field-meta.xml
<CustomField>
    <fullName>midName__c</fullName>
    <label>midName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>