force-app/main/default/objects/Employee__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <label>nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INDIAN</fullName>
            </value>
            <value>
                <fullName>AMERICIAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>