force-app/main/default/objects/Employee__c/fields/NovigoEmailId__c.field-meta.xml
<CustomField>
    <fullName>NovigoEmailId__c</fullName>
    <label>NovigoEmailId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>