force-app/main/default/objects/Employee__c/fields/reachedPreviewStage__c.field-meta.xml
<CustomField>
    <fullName>reachedPreviewStage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reachedPreviewStage</label>
    <type>Checkbox</type>
</CustomField>