force-app/main/default/objects/Employee__c/fields/resCity__c.field-meta.xml
<CustomField>
    <fullName>resCity__c</fullName>
    <label>resCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>