force-app/main/default/objects/Employee__c/fields/resState__c.field-meta.xml
<CustomField>
    <fullName>resState__c</fullName>
    <label>resState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>