force-app/main/default/objects/Employee__c/fields/submittedDate__c.field-meta.xml
<CustomField>
    <fullName>submittedDate__c</fullName>
    <label>submittedDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>