force-app/main/default/objects/Employee__c/fields/telephone__c.field-meta.xml
<CustomField>
    <fullName>telephone__c</fullName>
    <label>telephone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>